--- a/phylo_calls_snakemake/Snakefile
+++ b/phylo_calls_snakemake/Snakefile
@@ -4,5 +4,5 @@ rule MVFtools_vcf2mvf:
 	output:
 	    mvf="data/Pease_etal_SL2.50ch01.mvf"
 	shell:
-	    "python3 mvftools/mvftools.py ConvertVCF2MVF --vcf {input.vcf} --out {output.mvf}
+	    "python3 src/mvftools.py ConvertVCF2MVF --vcf {input.vcf} --out {output.mvf}
 
