--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # heavy data
 /PhyloGWAS_test/ms_sim_tomato_ch1.txt
 /PhyloGWAS_test/seedms
+/phylo_calls_snakemake/data/Pease_etal_SL2.50ch01.mvf
+/phylo_calls_snakemake/data/Pease_etal_SL2.50ch01.vcf
+/phylo_calls_snakemake/data/Pease_tomato_pH.total
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
